# decoration-bidding

./: .env.example  .gitignore  AGENTS.md  README.md  dev.sh  docker-compose.infra.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.opencode/: opencode.json
apps/ai-agent-service/: package.json
apps/ai-agent-service/src/: app.ts  config.ts  index.ts  instrumentation.ts  langfuse.ts
apps/bid-service/: package.json
apps/bid-service/src/: app.ts  config.ts  index.ts
apps/bim-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
apps/bim-service/src/: app.py  config.py
apps/bim-service/src/api/: routes.py
apps/bim-service/src/models/: schemas.py
apps/bim-service/src/services/: boq_engine.py  document_processor.py  ifc_parser.py  pdf_parser.py
apps/core-service/: Dockerfile  package.json  tsconfig.json
apps/gateway/: package.json
apps/notify-service/: package.json
apps/scraper-service/: package.json
apps/tender-service/: package.json
apps/user-service/: package.json
apps/voice-service/: package.json
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
docs/: index.html  系统设计规格书.md
docs/prototype/: diff.md  index.html
docs/specs/: api-contracts.md  auth-integration.md  development-roadmap.md  error-codes.md  frontend-design-system.md  state-management.md
docs/story/: 00-data-model.md  01-auth.md  02-organization.md  03-tender.md  04-bid.md  index.html
infra/docker/: node.Dockerfile
infra/k8s/: README.md
(+167 files in other folders)
