[project]
name = "bim-service"
version = "0.0.1"
description = "BIM/IFC 服务 - IfcOpenShell 解析、BOQ 提取、文件生成"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "ifcopenshell>=0.7.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aio-pika>=9.4.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    # 文档预处理 (RAG 摄入)
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "pytesseract>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
